chore: migrate 6 packages to MSW v2 (batch 4/4)
Migrate remaining packages to MSW v2:
- kubernetes-react
- kubernetes-node (with improved cert/key verification via http-proxy-middleware mock)
- cli (including plugin templates)
- app-next-example-plugin (dependency only)
- integration-react (dependency only)
- plugins/app (dependency only)

Note: kubernetes-node previously used MSW v1 internals to spy on HTTPS
cert/key usage. Refactored to mock http-proxy-middleware router targets
instead, which is more robust and doesn't depend on MSW internals.

Signed-off-by: Johan Persson <johanopersson@gmail.com>

--- a/packages/cli/templates/frontend-plugin/src/components/ExampleComponent/ExampleComponent.test.tsx.hbs
+++ b/packages/cli/templates/frontend-plugin/src/components/ExampleComponent/ExampleComponent.test.tsx.hbs
@@ -1,5 +1,5 @@
 import { ExampleComponent } from './ExampleComponent';
-import { rest } from 'msw';
+import { http, HttpResponse } from 'msw';
 import { setupServer } from 'msw/node';
 import { screen } from '@testing-library/react';
 import {
@@ -15,7 +15,7 @@ describe('ExampleComponent', () => {
   // setup mock response
   beforeEach(() => {
     server.use(
-      rest.get('/*', (_, res, ctx) => res(ctx.status(200), ctx.json({}))),
+      http.get('/*', () => HttpResponse.json({})),
     );
   });
 
