--- a/packages/cli/templates/new-frontend-plugin/src/components/ExampleComponent/ExampleComponent.test.tsx.hbs
+++ b/packages/cli/templates/new-frontend-plugin/src/components/ExampleComponent/ExampleComponent.test.tsx.hbs
@@ -1,5 +1,5 @@
 import { ExampleComponent } from './ExampleComponent';
-import { rest } from 'msw';
+import { http, HttpResponse } from 'msw';
 import { setupServer } from 'msw/node';
 import { screen } from '@testing-library/react';
 import {
@@ -15,7 +15,7 @@ describe('ExampleComponent', () => {
   // setup mock response
   beforeEach(() => {
     server.use(
-      rest.get('/*', (_, res, ctx) => res(ctx.status(200), ctx.json({}))),
+      http.get('/*', () => HttpResponse.json({})),
     );
   });
 
