--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -51,9 +51,10 @@
     --bui-gray-6: #8c8c8c;
     --bui-gray-7: #757575;
     --bui-gray-8: #595959;
-    --bui-bg: var(--bui-gray-1);
+    --bui-bg-surface-0: var(--bui-gray-1);
     --bui-bg-surface-1: var(--bui-white);
-    --bui-bg-surface-2: var(--bui-gray-2);
+    --bui-bg-surface-2: var(--bui-gray-1);
+    --bui-bg-surface-3: var(--bui-gray-2);
     --bui-bg-solid: #1f5493;
     --bui-bg-solid-hover: #163a66;
     --bui-bg-solid-pressed: #0f2b4e;
@@ -99,9 +100,10 @@
     --bui-gray-6: #7b7b7b;
     --bui-gray-7: #9e9e9e;
     --bui-gray-8: #b4b4b4;
-    --bui-bg: #333;
-    --bui-bg-surface-1: #424242;
+    --bui-bg-surface-0: var(--bui-black);
+    --bui-bg-surface-1: var(--bui-gray-1);
     --bui-bg-surface-2: var(--bui-gray-2);
+    --bui-bg-surface-3: var(--bui-gray-3);
     --bui-bg-solid: #9cc9ff;
     --bui-bg-solid-hover: #83b9fd;
     --bui-bg-solid-pressed: #83b9fd;
