--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -241,7 +241,7 @@
   }
 
   body {
-    background-color: var(--bui-bg);
+    background-color: var(--bui-bg-surface-0);
     color: var(--bui-fg-primary);
     font-family: var(--bui-font-regular);
     font-weight: var(--bui-font-weight-regular);
