--- a/packages/ui/src/css/tokens.css
+++ b/packages/ui/src/css/tokens.css
@@ -80,24 +80,45 @@
     --bui-gray-7: #757575;
     --bui-gray-8: #595959;
 
-    /* Background Colors */
+    /* Surfaces colors */
     --bui-bg-surface-0: var(--bui-gray-1);
     --bui-bg-surface-1: var(--bui-white);
     --bui-bg-surface-2: var(--bui-gray-1);
     --bui-bg-surface-3: var(--bui-gray-2);
+
+    /* Solid background colors */
     --bui-bg-solid: #1f5493;
     --bui-bg-solid-hover: #163a66;
     --bui-bg-solid-pressed: #0f2b4e;
     --bui-bg-solid-disabled: #ebebeb;
-    --bui-bg-tint: transparent;
-    --bui-bg-tint-hover: rgba(31, 84, 147, 0.4);
-    --bui-bg-tint-pressed: rgba(31, 84, 147, 0.6);
-    --bui-bg-tint-disabled: #ebebeb;
+
+    /* Neutral background colors */
+    --bui-bg-neutral-on-surface-0: oklch(0% 0 0 / 6%);
+    --bui-bg-neutral-on-surface-0-hover: oklch(0% 0 0 / 12%);
+    --bui-bg-neutral-on-surface-0-pressed: oklch(0% 0 0 / 16%);
+    --bui-bg-neutral-on-surface-0-disabled: oklch(0% 0 0 / 6%);
+
+    --bui-bg-neutral-on-surface-1: oklch(0% 0 0 / 6%);
+    --bui-bg-neutral-on-surface-1-hover: oklch(0% 0 0 / 12%);
+    --bui-bg-neutral-on-surface-1-pressed: oklch(0% 0 0 / 16%);
+    --bui-bg-neutral-on-surface-1-disabled: oklch(0% 0 0 / 6%);
+
+    --bui-bg-neutral-on-surface-2: oklch(0% 0 0 / 6%);
+    --bui-bg-neutral-on-surface-2-hover: oklch(0% 0 0 / 12%);
+    --bui-bg-neutral-on-surface-2-pressed: oklch(0% 0 0 / 16%);
+    --bui-bg-neutral-on-surface-2-disabled: oklch(0% 0 0 / 6%);
+
+    --bui-bg-neutral-on-surface-3: oklch(0% 0 0 / 6%);
+    --bui-bg-neutral-on-surface-3-hover: oklch(0% 0 0 / 12%);
+    --bui-bg-neutral-on-surface-3-pressed: oklch(0% 0 0 / 16%);
+    --bui-bg-neutral-on-surface-3-disabled: oklch(0% 0 0 / 6%);
+
+    /* Status background colors */
     --bui-bg-danger: #feebe7;
     --bui-bg-warning: #fff2b2;
     --bui-bg-success: #e6f6eb;
 
-    /* Foreground Colors */
+    /* Foreground colors */
     --bui-fg-primary: var(--bui-black);
     --bui-fg-secondary: var(--bui-gray-7);
     --bui-fg-link: #1f5493;
@@ -111,7 +132,7 @@
     --bui-fg-warning: #e36d05;
     --bui-fg-success: #1db954;
 
-    /* Border Colors */
+    /* Border colors */
     --bui-border: rgba(0, 0, 0, 0.1);
     --bui-border-hover: rgba(0, 0, 0, 0.2);
     --bui-border-pressed: rgba(0, 0, 0, 0.4);
@@ -120,7 +141,7 @@
     --bui-border-warning: #e36d05;
     --bui-border-success: #53db83;
 
-    /* Special Colors */
+    /* Special colors */
     --bui-ring: #1f5493;
     --bui-scrollbar: #a0a0a03b;
     --bui-scrollbar-thumb: #a0a0a0;
@@ -140,24 +161,45 @@
     --bui-gray-7: #9e9e9e;
     --bui-gray-8: #b4b4b4;
 
-    /* Background Colors */
+    /* Surfaces colors */
     --bui-bg-surface-0: var(--bui-black);
     --bui-bg-surface-1: var(--bui-gray-1);
     --bui-bg-surface-2: var(--bui-gray-2);
     --bui-bg-surface-3: var(--bui-gray-3);
+
+    /* Solid background colors */
     --bui-bg-solid: #9cc9ff;
     --bui-bg-solid-hover: #83b9fd;
     --bui-bg-solid-pressed: #83b9fd;
     --bui-bg-solid-disabled: #222222;
-    --bui-bg-tint: transparent;
-    --bui-bg-tint-hover: rgba(156, 201, 255, 0.12);
-    --bui-bg-tint-pressed: rgba(156, 201, 255, 0.16);
-    --bui-bg-tint-disabled: transparent;
+
+    /* Neutral background colors */
+    --bui-bg-neutral-on-surface-0: oklch(100% 0 0 / 10%);
+    --bui-bg-neutral-on-surface-0-hover: oklch(100% 0 0 / 14%);
+    --bui-bg-neutral-on-surface-0-pressed: oklch(100% 0 0 / 20%);
+    --bui-bg-neutral-on-surface-0-disabled: oklch(100% 0 0 / 10%);
+
+    --bui-bg-neutral-on-surface-1: oklch(100% 0 0 / 6%);
+    --bui-bg-neutral-on-surface-1-hover: oklch(100% 0 0 / 10%);
+    --bui-bg-neutral-on-surface-1-pressed: oklch(100% 0 0 / 16%);
+    --bui-bg-neutral-on-surface-1-disabled: oklch(100% 0 0 / 6%);
+
+    --bui-bg-neutral-on-surface-2: oklch(100% 0 0 / 8%);
+    --bui-bg-neutral-on-surface-2-hover: oklch(100% 0 0 / 12%);
+    --bui-bg-neutral-on-surface-2-pressed: oklch(100% 0 0 / 20%);
+    --bui-bg-neutral-on-surface-2-disabled: oklch(100% 0 0 / 8%);
+
+    --bui-bg-neutral-on-surface-3: oklch(100% 0 0 / 8%);
+    --bui-bg-neutral-on-surface-3-hover: oklch(100% 0 0 / 12%);
+    --bui-bg-neutral-on-surface-3-pressed: oklch(100% 0 0 / 20%);
+    --bui-bg-neutral-on-surface-3-disabled: oklch(100% 0 0 / 8%);
+
+    /* Status background colors */
     --bui-bg-danger: #3b1219;
     --bui-bg-warning: #302008;
     --bui-bg-success: #132d21;
 
-    /* Foreground Colors */
+    /* Foreground colors */
     --bui-fg-primary: var(--bui-white);
     --bui-fg-secondary: var(--bui-gray-7);
     --bui-fg-link: #9cc9ff;
@@ -171,7 +213,7 @@
     --bui-fg-warning: #e36d05;
     --bui-fg-success: #1db954;
 
-    /* Border Colors */
+    /* Border colors */
     --bui-border: rgba(255, 255, 255, 0.12);
     --bui-border-hover: rgba(255, 255, 255, 0.4);
     --bui-border-pressed: rgba(255, 255, 255, 0.5);
@@ -180,7 +222,7 @@
     --bui-border-warning: #e36d05;
     --bui-border-success: #53db83;
 
-    /* Special Colors */
+    /* Special colors */
     --bui-ring: #1f5493;
     --bui-scrollbar: #3636363a;
     --bui-scrollbar-thumb: #575757;
