Improve Button styles
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -59,10 +59,22 @@
     --bui-bg-solid-hover: #163a66;
     --bui-bg-solid-pressed: #0f2b4e;
     --bui-bg-solid-disabled: #ebebeb;
-    --bui-bg-tint: transparent;
-    --bui-bg-tint-hover: #1f549366;
-    --bui-bg-tint-pressed: #1f549399;
-    --bui-bg-tint-disabled: #ebebeb;
+    --bui-bg-neutral-on-surface-0: oklch(0% 0 0 / .06);
+    --bui-bg-neutral-on-surface-0-hover: oklch(0% 0 0 / .12);
+    --bui-bg-neutral-on-surface-0-pressed: oklch(0% 0 0 / .16);
+    --bui-bg-neutral-on-surface-0-disabled: oklch(0% 0 0 / .06);
+    --bui-bg-neutral-on-surface-1: oklch(0% 0 0 / .06);
+    --bui-bg-neutral-on-surface-1-hover: oklch(0% 0 0 / .12);
+    --bui-bg-neutral-on-surface-1-pressed: oklch(0% 0 0 / .16);
+    --bui-bg-neutral-on-surface-1-disabled: oklch(0% 0 0 / .06);
+    --bui-bg-neutral-on-surface-2: oklch(0% 0 0 / .06);
+    --bui-bg-neutral-on-surface-2-hover: oklch(0% 0 0 / .12);
+    --bui-bg-neutral-on-surface-2-pressed: oklch(0% 0 0 / .16);
+    --bui-bg-neutral-on-surface-2-disabled: oklch(0% 0 0 / .06);
+    --bui-bg-neutral-on-surface-3: oklch(0% 0 0 / .06);
+    --bui-bg-neutral-on-surface-3-hover: oklch(0% 0 0 / .12);
+    --bui-bg-neutral-on-surface-3-pressed: oklch(0% 0 0 / .16);
+    --bui-bg-neutral-on-surface-3-disabled: oklch(0% 0 0 / .06);
     --bui-bg-danger: #feebe7;
     --bui-bg-warning: #fff2b2;
     --bui-bg-success: #e6f6eb;
@@ -108,10 +120,22 @@
     --bui-bg-solid-hover: #83b9fd;
     --bui-bg-solid-pressed: #83b9fd;
     --bui-bg-solid-disabled: #222;
-    --bui-bg-tint: transparent;
-    --bui-bg-tint-hover: #9cc9ff1f;
-    --bui-bg-tint-pressed: #9cc9ff29;
-    --bui-bg-tint-disabled: transparent;
+    --bui-bg-neutral-on-surface-0: oklch(100% 0 0 / .1);
+    --bui-bg-neutral-on-surface-0-hover: oklch(100% 0 0 / .14);
+    --bui-bg-neutral-on-surface-0-pressed: oklch(100% 0 0 / .2);
+    --bui-bg-neutral-on-surface-0-disabled: oklch(100% 0 0 / .1);
+    --bui-bg-neutral-on-surface-1: oklch(100% 0 0 / .06);
+    --bui-bg-neutral-on-surface-1-hover: oklch(100% 0 0 / .1);
+    --bui-bg-neutral-on-surface-1-pressed: oklch(100% 0 0 / .16);
+    --bui-bg-neutral-on-surface-1-disabled: oklch(100% 0 0 / .06);
+    --bui-bg-neutral-on-surface-2: oklch(100% 0 0 / .08);
+    --bui-bg-neutral-on-surface-2-hover: oklch(100% 0 0 / .12);
+    --bui-bg-neutral-on-surface-2-pressed: oklch(100% 0 0 / .2);
+    --bui-bg-neutral-on-surface-2-disabled: oklch(100% 0 0 / .08);
+    --bui-bg-neutral-on-surface-3: oklch(100% 0 0 / .08);
+    --bui-bg-neutral-on-surface-3-hover: oklch(100% 0 0 / .12);
+    --bui-bg-neutral-on-surface-3-pressed: oklch(100% 0 0 / .2);
+    --bui-bg-neutral-on-surface-3-disabled: oklch(100% 0 0 / .08);
     --bui-bg-danger: #3b1219;
     --bui-bg-warning: #302008;
     --bui-bg-success: #132d21;
