Fixes --bui-bg-surface-0 token
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/packages/ui/src/css/tokens.css
+++ b/packages/ui/src/css/tokens.css
@@ -141,7 +141,7 @@
     --bui-gray-8: #b4b4b4;
 
     /* Background Colors */
-    --bui-bg-surface-0: var(--bui-black);
+    --bui-bg-surface-0: #333;
     --bui-bg-surface-1: var(--bui-gray-1);
     --bui-bg-surface-2: var(--bui-gray-2);
     --bui-bg-surface-3: var(--bui-gray-3);
