--- a/packages/ui/src/components/Flex/Flex.module.css
+++ b/packages/ui/src/components/Flex/Flex.module.css
@@ -39,4 +39,16 @@
   .bui-Flex[data-surface='3'] {
     background-color: var(--bui-bg-surface-3);
   }
+
+  .bui-Flex[data-surface='danger'] {
+    background-color: var(--bui-bg-danger);
+  }
+
+  .bui-Flex[data-surface='warning'] {
+    background-color: var(--bui-bg-warning);
+  }
+
+  .bui-Flex[data-surface='success'] {
+    background-color: var(--bui-bg-success);
+  }
 }
