--- a/packages/ui/src/components/Button/Button.module.css
+++ b/packages/ui/src/components/Button/Button.module.css
@@ -80,7 +80,7 @@
       background-color: var(--bui-bg-neutral-on-surface-0-pressed);
     }
 
-    &[data-surface='1'] {
+    &[data-on-surface='1'] {
       background-color: var(--bui-bg-neutral-on-surface-1);
 
       &:hover {
@@ -92,7 +92,7 @@
       }
     }
 
-    &[data-surface='2'] {
+    &[data-on-surface='2'] {
       background-color: var(--bui-bg-neutral-on-surface-2);
 
       &:hover {
@@ -104,7 +104,7 @@
       }
     }
 
-    &[data-surface='3'] {
+    &[data-on-surface='3'] {
       background-color: var(--bui-bg-neutral-on-surface-3);
 
       &:hover {
@@ -133,7 +133,7 @@
     background-color: transparent;
     color: var(--bui-fg-primary);
 
-    &[data-surface='0'] {
+    &[data-on-surface='0'] {
       &:hover {
         background-color: var(--bui-bg-neutral-on-surface-0-hover);
       }
@@ -143,7 +143,7 @@
       }
     }
 
-    &[data-surface='1'] {
+    &[data-on-surface='1'] {
       &:hover {
         background-color: var(--bui-bg-neutral-on-surface-1-hover);
       }
@@ -153,7 +153,7 @@
       }
     }
 
-    &[data-surface='2'] {
+    &[data-on-surface='2'] {
       &:hover {
         background-color: var(--bui-bg-neutral-on-surface-2-hover);
       }
@@ -163,7 +163,7 @@
       }
     }
 
-    &[data-surface='3'] {
+    &[data-on-surface='3'] {
       &:hover {
         background-color: var(--bui-bg-neutral-on-surface-3-hover);
       }
