--- a/packages/ui/src/components/PasswordField/PasswordField.module.css
+++ b/packages/ui/src/components/PasswordField/PasswordField.module.css
@@ -111,6 +111,21 @@
       -webkit-appearance: none;
     }
 
+    /* Hide Edge/Chrome password reveal button */
+    &::-ms-reveal,
+    &::-ms-clear {
+      display: none;
+    }
+
+    /* Hide Chrome/Safari password manager icon */
+    &::-webkit-contacts-auto-fill-button,
+    &::-webkit-credentials-auto-fill-button {
+      visibility: hidden;
+      pointer-events: none;
+      position: absolute;
+      right: 0;
+    }
+
     &::placeholder {
       color: var(--bui-fg-secondary);
     }
