chore: support render function, document it, remove now unused POC context
Signed-off-by: Gabriel Dugny <gabriel.dugny@believe.com>

--- a/packages/ui/src/components/ToggleButtonGroup/ToggleButtonGroup.module.css
+++ b/packages/ui/src/components/ToggleButtonGroup/ToggleButtonGroup.module.css
@@ -24,6 +24,7 @@
     border-radius: var(--bui-radius-2);
     overflow: hidden;
     box-shadow: inset 0 0 0 1px var(--bui-border);
+    width: fit-content;
   }
 
   .bui-ToggleButtonGroup[data-orientation='vertical'] {
