--- a/packages/ui/src/components/Button/Button.module.css
+++ b/packages/ui/src/components/Button/Button.module.css
@@ -71,23 +71,23 @@
     color: var(--bui-fg-primary);
     background-color: var(--bui-bg-neutral-on-surface-0);
 
-    &:hover {
+    &:hover:not([data-disabled='true']):not([data-loading='true']) {
       background-color: var(--bui-bg-neutral-on-surface-0-hover);
       transition: background-color 150ms ease;
     }
 
-    &:active {
+    &:active:not([data-disabled='true']):not([data-loading='true']) {
       background-color: var(--bui-bg-neutral-on-surface-0-pressed);
     }
 
     &[data-on-surface='1'] {
       background-color: var(--bui-bg-neutral-on-surface-1);
 
-      &:hover {
+      &:hover:not([data-disabled='true']):not([data-loading='true']) {
         background-color: var(--bui-bg-neutral-on-surface-1-hover);
       }
 
-      &:active {
+      &:active:not([data-disabled='true']):not([data-loading='true']) {
         background-color: var(--bui-bg-neutral-on-surface-1-pressed);
       }
     }
@@ -95,11 +95,11 @@
     &[data-on-surface='2'] {
       background-color: var(--bui-bg-neutral-on-surface-2);
 
-      &:hover {
+      &:hover:not([data-disabled='true']):not([data-loading='true']) {
         background-color: var(--bui-bg-neutral-on-surface-2-hover);
       }
 
-      &:active {
+      &:active:not([data-disabled='true']):not([data-loading='true']) {
         background-color: var(--bui-bg-neutral-on-surface-2-pressed);
       }
     }
@@ -107,11 +107,11 @@
     &[data-on-surface='3'] {
       background-color: var(--bui-bg-neutral-on-surface-3);
 
-      &:hover {
+      &:hover:not([data-disabled='true']):not([data-loading='true']) {
         background-color: var(--bui-bg-neutral-on-surface-3-hover);
       }
 
-      &:active {
+      &:active:not([data-disabled='true']):not([data-loading='true']) {
         background-color: var(--bui-bg-neutral-on-surface-3-pressed);
       }
     }
@@ -124,7 +124,6 @@
 
     &[data-disabled='true'],
     &[data-loading='true'] {
-      box-shadow: inset 0 0 0 1px var(--bui-border-disabled);
       color: var(--bui-fg-disabled);
     }
   }
