Rename shadow token
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/packages/ui/src/components/Menu/Menu.module.css
+++ b/packages/ui/src/components/Menu/Menu.module.css
@@ -20,7 +20,7 @@
   .bui-MenuPopover {
     display: flex;
     flex-direction: column;
-    box-shadow: var(--bui-shadow-overlay);
+    box-shadow: var(--bui-shadow);
     border: 1px solid var(--bui-border);
     border-radius: var(--bui-radius-2);
     background: var(--bui-bg-surface-1);
