--- a/packages/ui/src/css/tokens.css
+++ b/packages/ui/src/css/tokens.css
@@ -147,7 +147,7 @@
     --bui-scrollbar-thumb: #a0a0a0;
 
     /* Shadows */
-    --bui-shadow-overlay: 0 10px 15px -3px rgba(0 0 0 / 0.1),
+    --bui-shadow: 0 10px 15px -3px rgba(0 0 0 / 0.1),
       0 4px 6px -4px rgba(0 0 0 / 0.1);
 
     --bui-animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
@@ -232,6 +232,6 @@
     --bui-scrollbar-thumb: #575757;
 
     /* Shadows */
-    --bui-shadow-overlay: none;
+    --bui-shadow: none;
   }
 }
