--- a/packages/ui/src/components/Popover/Popover.module.css
+++ b/packages/ui/src/components/Popover/Popover.module.css
@@ -18,7 +18,7 @@
 
 @layer components {
   .bui-Popover {
-    box-shadow: var(--bui-shadow-overlay);
+    box-shadow: var(--bui-shadow);
     border-radius: var(--bui-radius-3);
     background: var(--bui-bg-surface-1);
     border: 1px solid var(--bui-gray-3);
